apps/services/devbox/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devbox
  labels:
    app: devbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devbox
  template:
    metadata:
      labels:
        app: devbox
    spec:
      hostNetwork: false
      nodeSelector:
        kubernetes.io/hostname: bigrig
      containers:
      - name: devbox
        image: ubuntu:24.04
        securityContext:
          privileged: true
        ports:
          - containerPort: 22
        command: ["/bin/bash"]
        args: 
          - -c
          - |
            set -x
            bash /postinstall.sh > /var/log/postinstall.log 2>&1 & sleep 5 && tail -f /var/log/postinstall.log || echo "Install failed: $?"
            sleep infinity
        volumeMounts:
          - mountPath: /home
            name: home
          - mountPath: /root/.ssh/authorized_keys
            name: ssh-pubkey
            subPath: authorized_keys
            readOnly: true
          - mountPath: /postinstall.sh
            name: postinstall
            subPath: postinstall.sh
            readOnly: true
          - mountPath: /var/lib/docker
            name: var-lib-docker
          - mountPath: /var
            name: host-var
          # - mountPath: /run/containerd/containerd.sock
          #   name: containerd-socket
          #   readOnly: false
          # - mountPath: /tmp
          #   name: host-tmp

      volumes:
      - name: home
        persistentVolumeClaim:
          claimName: devbox-home
      - name: ssh-pubkey
        secret:
          secretName: ssh-pubkey
          items:
            - key: authorized_keys
              path: authorized_keys
      - name: postinstall
        configMap:
          name: postinstall
          items:
            - key: postinstall.sh
              path: postinstall.sh
      - name: var-lib-docker
        hostPath:
          path: /var/lib/docker
          type: DirectoryOrCreate
      - name: host-var
        hostPath:
          path: /var/
          type: DirectoryOrCreate
