apps/services/devbox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: devbox
spec:
  type: LoadBalancer
  ports:
    - name: "ssh"
      port: 22
      targetPort: 22
    - name: "http"
      port: 80
      targetPort: 80
    - name: "https"
      port: 443
      targetPort: 443
    - name: "node"
      port: 3000
      targetPort: 3000
    - name: "http-alt"
      port: 8080
      targetPort: 8080
    - name: hytale-server
      port: 5520
      targetPort: 5520
  selector:
    app: devbox
